--- a/default.html
+++ b/default.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <link href="img/icons/favicon.png" rel="shortcut icon">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link href="css/main.css?v=7342" rel="stylesheet" type="text/css">
-    <script src="js/main.js?v=7342" type="text/javascript"></script>
+    <link href="css/main.css?v=38215" rel="stylesheet" type="text/css">
+    <script src="js/main.js?v=38215" type="text/javascript"></script>
     <!-- Meta tags facebook-->
     <meta property="og:title" content="#">
     <meta property="og:description" content="#">
@@ -42,11 +42,12 @@
                 </div>
                 <nav>
                   <ul>
-                    <li><a data-goto=".section--content">Quienes somos</a></li>
+                    <li><a data-goto=".section--categories">Servicios</a></li>
                     <li><a data-goto=".section--features">Ventajas</a></li>
-                    <li><a data-goto=".section--media-1">Hogar</a></li>
-                    <li><a data-goto=".section--media-2">Inversión</a></li>
-                    <li><a data-goto=".section--offerts">Proyectos</a></li>
+                    <li><a data-goto=".section--offerts">Ofertas</a></li>
+                    <li><a data-goto=".section--media-1">Inversionista</a></li>
+                    <li><a data-goto=".section--media-2">Propietario</a></li>
+                    <li><a data-goto=".section--media-3">Administración</a></li>
                   </ul>
                 </nav>
               </div>
@@ -75,5 +76,44 @@
         </div>
       </section>
     </div>
+    <footer>
+      <div class="footer__wrap">
+        <div class="cols">
+          <div class="footer__flex">
+            <div class="col-md-4">
+              <div class="footer__info">
+                <div class="footer__logo"><img src="img/icons/"></div>
+                <p class="footer__description">Turpis porta vitae imperdiet mollis donec placerat sem pharetra feugiat porta felis id commodo diam.
+                </p>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="footer__nav">
+                <nav>
+                  <ul>
+                    <li><a href="#">Servicios<span class="fa fa-angle-right"></span></a></li>
+                    <li><a href="#">Ventajas<span class="fa fa-angle-right"></span></a></li>
+                    <li><a href="#">Ofertas<span class="fa fa-angle-right"></span></a></li>
+                    <li><a href="#">Inversionista<span class="fa fa-angle-right"></span></a></li>
+                    <li><a href="#">Propietario<span class="fa fa-angle-right"></span></a></li>
+                    <li><a href="#">Administracion<span class="fa fa-angle-right"></span></a></li>
+                  </ul>
+                </nav>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="footer__socials">
+                <div class="footer__social"><a href="#"><span class="fa fa-whatsapp"></span></a></div>
+                <div class="footer__social"><a href="#"><span class="fa fa-facebook"></span></a></div>
+                <div class="footer__social"><a href="#"><span class="fa fa-envelope"></span></a></div>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-12">
+            <div class="footer__copyright"><span>Copyright 2021 - UPhome, Estudio inmobiliario. Todos los derechos reservados</span></div>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
