--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <link href="img/icons/favicon.png" rel="shortcut icon">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link href="css/main.css?v=45784" rel="stylesheet" type="text/css">
-    <script src="js/main.js?v=45784" type="text/javascript"></script>
+    <link href="css/main.css?v=15677" rel="stylesheet" type="text/css">
+    <script src="js/main.js?v=15677" type="text/javascript"></script>
     <!-- Meta tags facebook-->
     <meta property="og:title" content="#">
     <meta property="og:description" content="#">
@@ -27,7 +27,7 @@
       <div class="header__primary">
         <div class="header__wrap">
           <div class="header__inner">
-            <div class="header__logo"><a href="index.html"><span>UPHOME</span></a></div>
+            <div class="header__logo"><a href="index.html"><img src="img/icons/logo-uphome.png"></a></div>
             <div class="header__nav">
               <div class="header__nav__bg"></div>
               <div class="header__nav__nav">
@@ -78,7 +78,7 @@
         <div class="section__wrap section__wrap--main">
           <div class="section__body">
             <div class="section__content">
-              <h1 class="section__title">UPhome, Estudio inmobiliario.</h1>
+              <h1 class="section__title">UPhome, <span class="words-alternate" data-delay="4000" data-words="Estudio Inmobiliario,Comienza invertir en tu futuro,Tu futura mejor inversión,Mi nuevo hogar,Asistencia de compra inmobiliaria,Terrenos para tu futuro">Buscamos tu nuevo hogar.</span></h1>
               <p class="section__description"> Buscamos tu futura casa o tu nueva inversión inmobiliaria.</p><a href="#" class="btn btn--color">Contacto<span class="fa fa-angle-right"></span></a>
             </div>
           </div>
@@ -88,7 +88,7 @@
         <div class="section__wrap">
           <div class="section__header">
             <h3 class="section__title">Servicios</h3>
-            <p class="section__description">Dictumst aenean aliquet id quis per senectus rhoncus sollicitudin justo suscipit suspendisse adipiscing pharetra donec.
+            <p class="section__description">Tristique molestie ut ac ante eleifend consequat dictum tristique varius sed facilisis tincidunt ac condimentum.
             </p>
           </div>
           <div class="section__body">
@@ -220,7 +220,7 @@
                     </div>
                     <div class="article__body">
                       <h4 class="article__title">Nombre departamento</h4>
-                      <p class="article__description">Augue cubilia tristique cubilia orci scelerisque sagittis curae colus aliquam volutpat donec.
+                      <p class="article__description">Tristique massa varius pretium sociosqu habitant eros quisque eros habitant metus semper.
                       </p>
                       <p class="article__commune">Santiago</p>
                       <div class="article__date">Fecha de entrega<span>19/11/2021</span></div>
@@ -237,7 +237,7 @@
                     </div>
                     <div class="article__body">
                       <h4 class="article__title">Nombre departamento</h4>
-                      <p class="article__description">Maecenas mauris lacus eu pellentesque dapibus gravida accumsan rutrum non in neque.
+                      <p class="article__description">Ut interdum bibendum vel lobortis dictumst curabitur inceptos sem morbi purus nec.
                       </p>
                       <p class="article__commune">Santiago</p>
                       <div class="article__date">Fecha de entrega<span>19/11/2021</span></div>
@@ -254,7 +254,7 @@
                     </div>
                     <div class="article__body">
                       <h4 class="article__title">Nombre departamento</h4>
-                      <p class="article__description">Rhoncus condimentum dictum curabitur odio libero iaculis tortor nec taciti morbi hendrerit.
+                      <p class="article__description">Hac elit accumsan nisi fermentum eu fermentum arcu sagittis et quisque maecenas.
                       </p>
                       <p class="article__commune">Santiago</p>
                       <div class="article__date">Fecha de entrega<span>19/11/2021</span></div>
@@ -271,7 +271,7 @@
                     </div>
                     <div class="article__body">
                       <h4 class="article__title">Nombre departamento</h4>
-                      <p class="article__description">Varius mattis vivamus ullamcorper magna erat diam ultrices in interdum est sodales.
+                      <p class="article__description">Mauris massa volutpat dictum lectus interdum malesuada integer lacus hac vestibulum justo.
                       </p>
                       <p class="article__commune">Santiago</p>
                       <div class="article__date">Fecha de entrega<span>19/11/2021</span></div>
@@ -288,7 +288,7 @@
                     </div>
                     <div class="article__body">
                       <h4 class="article__title">Nombre departamento</h4>
-                      <p class="article__description">Tincidunt risus sociosqu a aliquam proin pellentesque ut convallis himenaeos faucibus vel.
+                      <p class="article__description">Suspendisse massa arcu vitae maecenas primis dapibus semper suspendisse donec metus quisque.
                       </p>
                       <p class="article__commune">Santiago</p>
                       <div class="article__date">Fecha de entrega<span>19/11/2021</span></div>
@@ -305,7 +305,7 @@
                     </div>
                     <div class="article__body">
                       <h4 class="article__title">Nombre departamento</h4>
-                      <p class="article__description">A taciti tempor consequat elit laoreet rutrum nisi porttitor suscipit sociosqu viverra.
+                      <p class="article__description">Leo curae nunc tincidunt aenean euismod sodales class curabitur tempor ut vel.
                       </p>
                       <p class="article__commune">Santiago</p>
                       <div class="article__date">Fecha de entrega<span>19/11/2021</span></div>
@@ -322,7 +322,7 @@
                     </div>
                     <div class="article__body">
                       <h4 class="article__title">Nombre departamento</h4>
-                      <p class="article__description">Scelerisque porttitor nullam gravida vehicula habitant pulvinar viverra aliquam curabitur platea turpis.
+                      <p class="article__description">Nam cubilia molestie accumsan duis sodales massa placerat nostra porta ligula inceptos.
                       </p>
                       <p class="article__commune">Santiago</p>
                       <div class="article__date">Fecha de entrega<span>19/11/2021</span></div>
@@ -339,7 +339,7 @@
                     </div>
                     <div class="article__body">
                       <h4 class="article__title">Nombre departamento</h4>
-                      <p class="article__description">Maecenas habitant hendrerit sodales habitant laoreet tortor scelerisque eros libero dui mauris.
+                      <p class="article__description">Scelerisque facilisis leo faucibus volutpat congue porttitor luctus cras aptent interdum ultrices.
                       </p>
                       <p class="article__commune">Santiago</p>
                       <div class="article__date">Fecha de entrega<span>19/11/2021</span></div>
@@ -360,7 +360,7 @@
           <div class="section__body">
             <div class="cols">
               <div class="section__flex">
-                <div class="col-md-6 dscroll">
+                <div class="col-md-6">
                   <div class="section__slider">
                     <div class="slider">
                       <div class="slides">
@@ -383,7 +383,12 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-md-6 dscroll">
+                <div class="col-md-6">
+                  <div class="section__eff">
+                    <div class="left"></div>
+                    <div class="center"></div>
+                    <div class="right"></div>
+                  </div>
                   <div class="section__content"><span class="section__subtitle">Inversionista</span>
                     <h2 class="section__title">Comienza a invertir</h2>
                     <p class="section__description">Uphome te asiste en la inversión inmobiliaria, analizamos y encontramos las mejores ofertas de inversión en el mercado inmobiliario.</p>
@@ -428,7 +433,7 @@
           <div class="section__body">
             <div class="cols">
               <div class="section__flex">
-                <div class="col-md-6 dscroll">
+                <div class="col-md-6 col-md-push-6 dscroll">
                   <div class="section__slider">
                     <div class="slider">
                       <div class="slides">
@@ -451,7 +456,12 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-md-6 dscroll">
+                <div class="col-md-6 col-md-pull-6 dscroll">
+                  <div class="section__eff">
+                    <div class="left"></div>
+                    <div class="center"></div>
+                    <div class="right"></div>
+                  </div>
                   <div class="section__content"><span class="section__subtitle">Propietario</span>
                     <h2 class="section__title">Comienza en tu hogar</h2>
                     <p class="section__description">Ya estás en la búsqueda de tu futuro hogar. En Uphome te ayudamos a encontrar la propiedad que mejor se adapta a tus requerimientos.</p>
@@ -520,6 +530,11 @@
                   </div>
                 </div>
                 <div class="col-md-6 dscroll">
+                  <div class="section__eff">
+                    <div class="left"></div>
+                    <div class="center"></div>
+                    <div class="right"></div>
+                  </div>
                   <div class="section__content"><span class="section__subtitle">Administración</span>
                     <h2 class="section__title">Comienza a disfrutar</h2>
                     <p class="section__description">Estás en búsqueda de tu segunda vivienda o piensas en vivir rodeado de naturaleza y fuera de la ciudad. En Uphome te encontramos tu terreno.</p>
@@ -730,8 +745,8 @@
           <div class="footer__flex">
             <div class="col-md-4">
               <div class="footer__info">
-                <div class="footer__logo"><img src="img/icons/"></div>
-                <p class="footer__description">Quisque aenean mattis facilisis aenean quis urna leo mi congue tellus facilisis nisl consequat lectus.
+                <div class="footer__logo"><img src="img/icons/logo-uphome.png"></div>
+                <p class="footer__description">Dui suscipit vulputate nostra proin metus condimentum urna vestibulum fusce mauris ut gravida mauris enim.
                 </p>
               </div>
             </div>
