--- a/default.html
+++ b/default.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <link href="img/icons/favicon.png" rel="shortcut icon">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link href="css/main.css?v=38215" rel="stylesheet" type="text/css">
-    <script src="js/main.js?v=38215" type="text/javascript"></script>
+    <link href="css/main.css?v=563" rel="stylesheet" type="text/css">
+    <script src="js/main.js?v=563" type="text/javascript"></script>
     <!-- Meta tags facebook-->
     <meta property="og:title" content="#">
     <meta property="og:description" content="#">
@@ -27,7 +27,7 @@
       <div class="header__primary">
         <div class="header__wrap">
           <div class="header__inner">
-            <div class="header__logo"><a href="index.html"><span>UPHOME</span></a></div>
+            <div class="header__logo"><a href="index.html"><img src="img/icons/logo-uphome.png"></a></div>
             <div class="header__nav">
               <div class="header__nav__bg"></div>
               <div class="header__nav__nav">
@@ -82,8 +82,8 @@
           <div class="footer__flex">
             <div class="col-md-4">
               <div class="footer__info">
-                <div class="footer__logo"><img src="img/icons/"></div>
-                <p class="footer__description">Turpis porta vitae imperdiet mollis donec placerat sem pharetra feugiat porta felis id commodo diam.
+                <div class="footer__logo"><img src="img/icons/logo-uphome.png"></div>
+                <p class="footer__description">Vestibulum egestas consequat lacinia fames commodo neque etiam vestibulum tristique eu eget fames commodo sagittis.
                 </p>
               </div>
             </div>
