--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <link href="img/icons/favicon.png" rel="shortcut icon">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link href="css/main.css?v=15677" rel="stylesheet" type="text/css">
-    <script src="js/main.js?v=15677" type="text/javascript"></script>
+    <link href="css/main.css?v=73028" rel="stylesheet" type="text/css">
+    <script src="js/main.js?v=73028" type="text/javascript"></script>
     <!-- Meta tags facebook-->
     <meta property="og:title" content="#">
     <meta property="og:description" content="#">
@@ -78,7 +78,7 @@
         <div class="section__wrap section__wrap--main">
           <div class="section__body">
             <div class="section__content">
-              <h1 class="section__title">UPhome, <span class="words-alternate" data-delay="4000" data-words="Estudio Inmobiliario,Comienza invertir en tu futuro,Tu futura mejor inversión,Mi nuevo hogar,Asistencia de compra inmobiliaria,Terrenos para tu futuro">Buscamos tu nuevo hogar.</span></h1>
+              <h1 class="section__title">UPhome, <span class="words-alternate" data-delay="4000" data-words="Estudio Inmobiliario,Comienza invertir en tu futuro,Tu futura mejor inversión,Mi nuevo hogar,Asistencia de compra inmobiliaria,Terrenos para tu futuro,Asistencia Financiera">Buscamos tu nuevo hogar.</span></h1>
               <p class="section__description"> Buscamos tu futura casa o tu nueva inversión inmobiliaria.</p><a href="#" class="btn btn--color">Contacto<span class="fa fa-angle-right"></span></a>
             </div>
           </div>
@@ -88,7 +88,7 @@
         <div class="section__wrap">
           <div class="section__header">
             <h3 class="section__title">Servicios</h3>
-            <p class="section__description">Tristique molestie ut ac ante eleifend consequat dictum tristique varius sed facilisis tincidunt ac condimentum.
+            <p class="section__description">Fringilla nam facilisis dictumst neque adipiscing feugiat ultricies nec ultricies sociosqu arcu gravida aliquam tortor.
             </p>
           </div>
           <div class="section__body">
@@ -98,7 +98,7 @@
                   <div class="section__tag">Inversionista</div>
                   <h2 class="section__title">Comienza a invertir</h2>
                   <p class="section__description">Uphome te asiste en la inversión inmobiliaria, analizamos y encontramos las mejores ofertas de inversión en el mercado inmobiliario.</p>
-                  <div class="section__button"><a href="#" class="btn">Ver más<span class="fa fa-angle-down"></span></a></div>
+                  <div class="section__button"><a data-goto=".section--media-1" class="btn">Ver más<span class="fa fa-angle-down"></span></a></div>
                 </div>
               </div>
               <div class="col-md-4 dscroll">
@@ -106,7 +106,7 @@
                   <div class="section__tag">Propietario</div>
                   <h2 class="section__title">Comienza en tu hogar</h2>
                   <p class="section__description">Ya estás en la búsqueda de tu futuro hogar. En Uphome te ayudamos a encontrar la propiedad que mejor se adapta a tus requerimientos.</p>
-                  <div class="section__button"><a href="#" class="btn">Ver más<span class="fa fa-angle-down"></span></a></div>
+                  <div class="section__button"><a data-goto=".section--media-2" class="btn">Ver más<span class="fa fa-angle-down"></span></a></div>
                 </div>
               </div>
               <div class="col-md-4 dscroll">
@@ -114,7 +114,7 @@
                   <div class="section__tag">Administración</div>
                   <h2 class="section__title">Comienza a disfrutar</h2>
                   <p class="section__description">Estás en búsqueda de tu segunda vivienda o piensas en vivir rodeado de naturaleza y fuera de la ciudad. En Uphome te encontramos tu terreno.</p>
-                  <div class="section__button"><a href="#" class="btn">Ver más<span class="fa fa-angle-down"></span></a></div>
+                  <div class="section__button"><a data-goto=".section--media-3" class="btn">Ver más<span class="fa fa-angle-down"></span></a></div>
                 </div>
               </div>
             </div>
@@ -151,7 +151,9 @@
                   <div class="article__icon"><img src="img/icons/1.svg"></div>
                   <div class="article__body">
                     <h4 class="article__title">Estudio de inversión inmobiliaria.</h4>
-                    <p class="article__description">En Uphome estamos buscando constantemente las mejores ofertas inmobiliarias del mercado para inversión. Para generar reales oportunidades de inversión y crecimiento.</p>
+                    <div class="article__content__more">
+                      <p class="article__description">En Uphome estamos buscando constantemente las mejores ofertas inmobiliarias del mercado para inversión. Para generar reales oportunidades de inversión y crecimiento.</p>
+                    </div><a class="article__more">Ver más<span class="fa fa-plus"></span></a>
                   </div>
                 </article>
               </div>
@@ -160,7 +162,9 @@
                   <div class="article__icon"><img src="img/icons/2.svg"></div>
                   <div class="article__body">
                     <h4 class="article__title">Análisis financiero y costos</h4>
-                    <p class="article__description">El financiamiento es parte clave a la hora de comenzar en las inversiones inmobiliarias o en la compra de tu propiedad. Nuestro equipo te asistirá y te recomendará las mejores alternativas financieras para la compra de propiedades.</p>
+                    <div class="article__content__more">
+                      <p class="article__description">El financiamiento es parte clave a la hora de comenzar en las inversiones inmobiliarias o en la compra de tu propiedad. Nuestro equipo te asistirá y te recomendará las mejores alternativas financieras para la compra de propiedades.</p>
+                    </div><a class="article__more">Ver más<span class="fa fa-plus"></span></a>
                   </div>
                 </article>
               </div>
@@ -169,7 +173,9 @@
                   <div class="article__icon"><img src="img/icons/3.svg"></div>
                   <div class="article__body">
                     <h4 class="article__title">Asesoría legal inmobiliaria</h4>
-                    <p class="article__description">Para la correcta compra de una propiedad es importante evaluar ciertos puntos, los cuales son decisivos para concretar una compra positiva. En Uphome te asesoramos en todos estos importantes puntos.</p>
+                    <div class="article__content__more">
+                      <p class="article__description">Para la correcta compra de una propiedad es importante evaluar ciertos puntos, los cuales son decisivos para concretar una compra positiva. En Uphome te asesoramos en todos estos importantes puntos.</p>
+                    </div><a class="article__more">Ver más<span class="fa fa-plus"></span></a>
                   </div>
                 </article>
               </div>
@@ -178,7 +184,9 @@
                   <div class="article__icon"><img src="img/icons/4.svg"></div>
                   <div class="article__body">
                     <h4 class="article__title">Servicios de administración</h4>
-                    <p class="article__description">La gestión inmobiliaria es clave para tu inversión. En Uphome nos encargamos de la búsqueda, evaluación de tus arrendatarios y el seguimiento del estado de tu propiedad. Por un bajo costo de este servicio.</p>
+                    <div class="article__content__more">
+                      <p class="article__description">La gestión inmobiliaria es clave para tu inversión. En Uphome nos encargamos de la búsqueda, evaluación de tus arrendatarios y el seguimiento del estado de tu propiedad. Por un bajo costo de este servicio.</p>
+                    </div><a class="article__more">Ver más<span class="fa fa-plus"></span></a>
                   </div>
                 </article>
               </div>
@@ -187,7 +195,9 @@
                   <div class="article__icon"><img src="img/icons/5.svg"></div>
                   <div class="article__body">
                     <h4 class="article__title">Compra inteligente </h4>
-                    <p class="article__description">En Uphome buscamos que la experiencia de comprar una propiedad sea lo más simple posible. Y para eso te ayudaremos a utilizar todos los beneficios y servicios que agilizarán la compra de tu futura propiedad.</p>
+                    <div class="article__content__more">
+                      <p class="article__description">En Uphome buscamos que la experiencia de comprar una propiedad sea lo más simple posible. Y para eso te ayudaremos a utilizar todos los beneficios y servicios que agilizarán la compra de tu futura propiedad.</p>
+                    </div><a class="article__more">Ver más<span class="fa fa-plus"></span></a>
                   </div>
                 </article>
               </div>
@@ -196,7 +206,9 @@
                   <div class="article__icon"><img src="img/icons/6.svg"></div>
                   <div class="article__body">
                     <h4 class="article__title">Asistencia en el financiamiento de tu PIE</h4>
-                    <p class="article__description">El PIE es el primer paso al camino de tu nueva propiedad. Que esto no se transforme en tu limitante, nosotros te podemos asistir y buscar la mejor alternativa para financiar tu PIE.</p>
+                    <div class="article__content__more">
+                      <p class="article__description">El PIE es el primer paso al camino de tu nueva propiedad. Que esto no se transforme en tu limitante, nosotros te podemos asistir y buscar la mejor alternativa para financiar tu PIE.</p>
+                    </div><a class="article__more">Ver más<span class="fa fa-plus"></span></a>
                   </div>
                 </article>
               </div>
@@ -220,7 +232,7 @@
                     </div>
                     <div class="article__body">
                       <h4 class="article__title">Nombre departamento</h4>
-                      <p class="article__description">Tristique massa varius pretium sociosqu habitant eros quisque eros habitant metus semper.
+                      <p class="article__description">Venenatis fusce quam eu magna ad aenean rhoncus in nisi tempor iaculis.
                       </p>
                       <p class="article__commune">Santiago</p>
                       <div class="article__date">Fecha de entrega<span>19/11/2021</span></div>
@@ -237,7 +249,7 @@
                     </div>
                     <div class="article__body">
                       <h4 class="article__title">Nombre departamento</h4>
-                      <p class="article__description">Ut interdum bibendum vel lobortis dictumst curabitur inceptos sem morbi purus nec.
+                      <p class="article__description">Praesent nullam cubilia eget purus bibendum nam donec mi convallis primis non.
                       </p>
                       <p class="article__commune">Santiago</p>
                       <div class="article__date">Fecha de entrega<span>19/11/2021</span></div>
@@ -254,7 +266,7 @@
                     </div>
                     <div class="article__body">
                       <h4 class="article__title">Nombre departamento</h4>
-                      <p class="article__description">Hac elit accumsan nisi fermentum eu fermentum arcu sagittis et quisque maecenas.
+                      <p class="article__description">Lacinia ultrices torquent gravida mauris velit blandit metus tempor mollis habitasse phasellus.
                       </p>
                       <p class="article__commune">Santiago</p>
                       <div class="article__date">Fecha de entrega<span>19/11/2021</span></div>
@@ -271,7 +283,7 @@
                     </div>
                     <div class="article__body">
                       <h4 class="article__title">Nombre departamento</h4>
-                      <p class="article__description">Mauris massa volutpat dictum lectus interdum malesuada integer lacus hac vestibulum justo.
+                      <p class="article__description">Posuere et interdum nec nam duis pharetra hac donec aliquam eu tristique.
                       </p>
                       <p class="article__commune">Santiago</p>
                       <div class="article__date">Fecha de entrega<span>19/11/2021</span></div>
@@ -288,7 +300,7 @@
                     </div>
                     <div class="article__body">
                       <h4 class="article__title">Nombre departamento</h4>
-                      <p class="article__description">Suspendisse massa arcu vitae maecenas primis dapibus semper suspendisse donec metus quisque.
+                      <p class="article__description">Suspendisse quisque eget commodo taciti pellentesque ultrices commodo eu vitae venenatis proin.
                       </p>
                       <p class="article__commune">Santiago</p>
                       <div class="article__date">Fecha de entrega<span>19/11/2021</span></div>
@@ -305,7 +317,7 @@
                     </div>
                     <div class="article__body">
                       <h4 class="article__title">Nombre departamento</h4>
-                      <p class="article__description">Leo curae nunc tincidunt aenean euismod sodales class curabitur tempor ut vel.
+                      <p class="article__description">Orci auctor a lacus auctor aliquam vivamus euismod scelerisque primis turpis accumsan.
                       </p>
                       <p class="article__commune">Santiago</p>
                       <div class="article__date">Fecha de entrega<span>19/11/2021</span></div>
@@ -322,7 +334,7 @@
                     </div>
                     <div class="article__body">
                       <h4 class="article__title">Nombre departamento</h4>
-                      <p class="article__description">Nam cubilia molestie accumsan duis sodales massa placerat nostra porta ligula inceptos.
+                      <p class="article__description">Rutrum pellentesque litora malesuada maecenas aptent semper dictum etiam ligula litora nibh.
                       </p>
                       <p class="article__commune">Santiago</p>
                       <div class="article__date">Fecha de entrega<span>19/11/2021</span></div>
@@ -339,7 +351,7 @@
                     </div>
                     <div class="article__body">
                       <h4 class="article__title">Nombre departamento</h4>
-                      <p class="article__description">Scelerisque facilisis leo faucibus volutpat congue porttitor luctus cras aptent interdum ultrices.
+                      <p class="article__description">Mauris cursus quam velit rhoncus in enim arcu suscipit elementum nulla imperdiet.
                       </p>
                       <p class="article__commune">Santiago</p>
                       <div class="article__date">Fecha de entrega<span>19/11/2021</span></div>
@@ -746,7 +758,7 @@
             <div class="col-md-4">
               <div class="footer__info">
                 <div class="footer__logo"><img src="img/icons/logo-uphome.png"></div>
-                <p class="footer__description">Dui suscipit vulputate nostra proin metus condimentum urna vestibulum fusce mauris ut gravida mauris enim.
+                <p class="footer__description">Tellus vestibulum feugiat venenatis felis quisque gravida habitant torquent ultricies tortor purus lectus iaculis velit.
                 </p>
               </div>
             </div>
