--- a/default.html
+++ b/default.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <link href="img/icons/favicon.png" rel="shortcut icon">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link href="css/main.css?v=563" rel="stylesheet" type="text/css">
-    <script src="js/main.js?v=563" type="text/javascript"></script>
+    <link href="css/main.css?v=56158" rel="stylesheet" type="text/css">
+    <script src="js/main.js?v=56158" type="text/javascript"></script>
     <!-- Meta tags facebook-->
     <meta property="og:title" content="#">
     <meta property="og:description" content="#">
@@ -83,7 +83,7 @@
             <div class="col-md-4">
               <div class="footer__info">
                 <div class="footer__logo"><img src="img/icons/logo-uphome.png"></div>
-                <p class="footer__description">Vestibulum egestas consequat lacinia fames commodo neque etiam vestibulum tristique eu eget fames commodo sagittis.
+                <p class="footer__description">Risus eleifend rhoncus nullam interdum vestibulum sodales leo elementum eros turpis ut aenean nostra volutpat.
                 </p>
               </div>
             </div>
