--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <link href="img/icons/favicon.png" rel="shortcut icon">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link href="css/main.css?v=73028" rel="stylesheet" type="text/css">
-    <script src="js/main.js?v=73028" type="text/javascript"></script>
+    <link href="css/main.css?v=89601" rel="stylesheet" type="text/css">
+    <script src="js/main.js?v=89601" type="text/javascript"></script>
     <!-- Meta tags facebook-->
     <meta property="og:title" content="#">
     <meta property="og:description" content="#">
@@ -47,7 +47,7 @@
                     <li><a data-goto=".section--offerts">Ofertas</a></li>
                     <li><a data-goto=".section--media-1">Inversionista</a></li>
                     <li><a data-goto=".section--media-2">Propietario</a></li>
-                    <li><a data-goto=".section--media-3">Administración</a></li>
+                    <li><a data-goto=".section--media-3">Terrenos</a></li>
                   </ul>
                 </nav>
               </div>
@@ -87,9 +87,8 @@
       <section class="section--categories">
         <div class="section__wrap">
           <div class="section__header">
-            <h3 class="section__title">Servicios</h3>
-            <p class="section__description">Fringilla nam facilisis dictumst neque adipiscing feugiat ultricies nec ultricies sociosqu arcu gravida aliquam tortor.
-            </p>
+            <h3 class="section__title">Servicios UPHOME</h3>
+            <p class="section__description">Te invitamos a conocer más de Uphome Estudio inmobiliario. Donde te asesoraremos en la búsqueda y comprar de propiedades sin costos adicional. Paga solamente por tu propiedad.</p>
           </div>
           <div class="section__body">
             <div class="cols">
@@ -111,7 +110,7 @@
               </div>
               <div class="col-md-4 dscroll">
                 <div class="section__category">
-                  <div class="section__tag">Administración</div>
+                  <div class="section__tag">Terrenos</div>
                   <h2 class="section__title">Comienza a disfrutar</h2>
                   <p class="section__description">Estás en búsqueda de tu segunda vivienda o piensas en vivir rodeado de naturaleza y fuera de la ciudad. En Uphome te encontramos tu terreno.</p>
                   <div class="section__button"><a data-goto=".section--media-3" class="btn">Ver más<span class="fa fa-angle-down"></span></a></div>
@@ -232,7 +231,7 @@
                     </div>
                     <div class="article__body">
                       <h4 class="article__title">Nombre departamento</h4>
-                      <p class="article__description">Venenatis fusce quam eu magna ad aenean rhoncus in nisi tempor iaculis.
+                      <p class="article__description">Consectetur est netus enim metus risus lacus ante curabitur ut class gravida.
                       </p>
                       <p class="article__commune">Santiago</p>
                       <div class="article__date">Fecha de entrega<span>19/11/2021</span></div>
@@ -249,7 +248,7 @@
                     </div>
                     <div class="article__body">
                       <h4 class="article__title">Nombre departamento</h4>
-                      <p class="article__description">Praesent nullam cubilia eget purus bibendum nam donec mi convallis primis non.
+                      <p class="article__description">Viverra risus eros volutpat praesent conubia et ut vivamus metus quis ultrices.
                       </p>
                       <p class="article__commune">Santiago</p>
                       <div class="article__date">Fecha de entrega<span>19/11/2021</span></div>
@@ -266,7 +265,7 @@
                     </div>
                     <div class="article__body">
                       <h4 class="article__title">Nombre departamento</h4>
-                      <p class="article__description">Lacinia ultrices torquent gravida mauris velit blandit metus tempor mollis habitasse phasellus.
+                      <p class="article__description">Imperdiet maecenas et molestie faucibus diam risus senectus malesuada colus inceptos phasellus.
                       </p>
                       <p class="article__commune">Santiago</p>
                       <div class="article__date">Fecha de entrega<span>19/11/2021</span></div>
@@ -283,7 +282,7 @@
                     </div>
                     <div class="article__body">
                       <h4 class="article__title">Nombre departamento</h4>
-                      <p class="article__description">Posuere et interdum nec nam duis pharetra hac donec aliquam eu tristique.
+                      <p class="article__description">Nostra himenaeos laoreet potenti risus conubia sem sollicitudin class volutpat curae dictumst.
                       </p>
                       <p class="article__commune">Santiago</p>
                       <div class="article__date">Fecha de entrega<span>19/11/2021</span></div>
@@ -300,7 +299,7 @@
                     </div>
                     <div class="article__body">
                       <h4 class="article__title">Nombre departamento</h4>
-                      <p class="article__description">Suspendisse quisque eget commodo taciti pellentesque ultrices commodo eu vitae venenatis proin.
+                      <p class="article__description">Vel condimentum habitasse consectetur himenaeos molestie fusce et posuere dictum lacus ut.
                       </p>
                       <p class="article__commune">Santiago</p>
                       <div class="article__date">Fecha de entrega<span>19/11/2021</span></div>
@@ -317,7 +316,7 @@
                     </div>
                     <div class="article__body">
                       <h4 class="article__title">Nombre departamento</h4>
-                      <p class="article__description">Orci auctor a lacus auctor aliquam vivamus euismod scelerisque primis turpis accumsan.
+                      <p class="article__description">Etiam donec magna fames et consequat eleifend neque venenatis aenean mi sodales.
                       </p>
                       <p class="article__commune">Santiago</p>
                       <div class="article__date">Fecha de entrega<span>19/11/2021</span></div>
@@ -334,7 +333,7 @@
                     </div>
                     <div class="article__body">
                       <h4 class="article__title">Nombre departamento</h4>
-                      <p class="article__description">Rutrum pellentesque litora malesuada maecenas aptent semper dictum etiam ligula litora nibh.
+                      <p class="article__description">Habitasse convallis volutpat pretium facilisis elit facilisis nec fusce ad felis sodales.
                       </p>
                       <p class="article__commune">Santiago</p>
                       <div class="article__date">Fecha de entrega<span>19/11/2021</span></div>
@@ -351,7 +350,7 @@
                     </div>
                     <div class="article__body">
                       <h4 class="article__title">Nombre departamento</h4>
-                      <p class="article__description">Mauris cursus quam velit rhoncus in enim arcu suscipit elementum nulla imperdiet.
+                      <p class="article__description">Rhoncus cras donec aliquam varius aliquam sodales integer lacinia elit cursus gravida.
                       </p>
                       <p class="article__commune">Santiago</p>
                       <div class="article__date">Fecha de entrega<span>19/11/2021</span></div>
@@ -547,7 +546,7 @@
                     <div class="center"></div>
                     <div class="right"></div>
                   </div>
-                  <div class="section__content"><span class="section__subtitle">Administración</span>
+                  <div class="section__content"><span class="section__subtitle">Terrenos</span>
                     <h2 class="section__title">Comienza a disfrutar</h2>
                     <p class="section__description">Estás en búsqueda de tu segunda vivienda o piensas en vivir rodeado de naturaleza y fuera de la ciudad. En Uphome te encontramos tu terreno.</p>
                   </div>
@@ -758,8 +757,11 @@
             <div class="col-md-4">
               <div class="footer__info">
                 <div class="footer__logo"><img src="img/icons/logo-uphome.png"></div>
-                <p class="footer__description">Tellus vestibulum feugiat venenatis felis quisque gravida habitant torquent ultricies tortor purus lectus iaculis velit.
-                </p>
+                <p class="footer__description">Uphome estudio de inversión inmobiliaria</p>
+              </div>
+              <div class="footer__info footer__info--min">
+                <p class="footer__description">Un proyecto de:</p>
+                <div class="footer__logo footer__logo--min"><a href="https://identy.cl/"><img src="img/icons/logo-identy.png"></a></div>
               </div>
             </div>
             <div class="col-md-4">
@@ -780,6 +782,7 @@
               <div class="footer__socials">
                 <div class="footer__social"><a href="#"><span class="fa fa-whatsapp"></span></a></div>
                 <div class="footer__social"><a href="#"><span class="fa fa-facebook"></span></a></div>
+                <div class="footer__social"><a href="#"><span class="fa fa-instagram"></span></a></div>
                 <div class="footer__social"><a href="#"><span class="fa fa-envelope"></span></a></div>
               </div>
             </div>
