--- a/default.html
+++ b/default.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <link href="img/icons/favicon.png" rel="shortcut icon">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link href="css/main.css?v=56158" rel="stylesheet" type="text/css">
-    <script src="js/main.js?v=56158" type="text/javascript"></script>
+    <link href="css/main.css?v=36627" rel="stylesheet" type="text/css">
+    <script src="js/main.js?v=36627" type="text/javascript"></script>
     <!-- Meta tags facebook-->
     <meta property="og:title" content="#">
     <meta property="og:description" content="#">
@@ -47,7 +47,7 @@
                     <li><a data-goto=".section--offerts">Ofertas</a></li>
                     <li><a data-goto=".section--media-1">Inversionista</a></li>
                     <li><a data-goto=".section--media-2">Propietario</a></li>
-                    <li><a data-goto=".section--media-3">Administración</a></li>
+                    <li><a data-goto=".section--media-3">Terrenos</a></li>
                   </ul>
                 </nav>
               </div>
@@ -83,8 +83,11 @@
             <div class="col-md-4">
               <div class="footer__info">
                 <div class="footer__logo"><img src="img/icons/logo-uphome.png"></div>
-                <p class="footer__description">Risus eleifend rhoncus nullam interdum vestibulum sodales leo elementum eros turpis ut aenean nostra volutpat.
-                </p>
+                <p class="footer__description">Uphome estudio de inversión inmobiliaria</p>
+              </div>
+              <div class="footer__info footer__info--min">
+                <p class="footer__description">Un proyecto de:</p>
+                <div class="footer__logo footer__logo--min"><a href="https://identy.cl/"><img src="img/icons/logo-identy.png"></a></div>
               </div>
             </div>
             <div class="col-md-4">
@@ -105,6 +108,7 @@
               <div class="footer__socials">
                 <div class="footer__social"><a href="#"><span class="fa fa-whatsapp"></span></a></div>
                 <div class="footer__social"><a href="#"><span class="fa fa-facebook"></span></a></div>
+                <div class="footer__social"><a href="#"><span class="fa fa-instagram"></span></a></div>
                 <div class="footer__social"><a href="#"><span class="fa fa-envelope"></span></a></div>
               </div>
             </div>
